# protobuf-ipc-example

./: LICENSE  README.md
client/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  global.cpp  global.h  main.cpp  socket.cpp  socket.h
server/: Cargo.toml  README.md  build.rs
server/protos/: message.proto
server/src/: client.rs  errors.rs  main.rs
